--- a/src/app/tournament-list/tournament-list.component.html
+++ b/src/app/tournament-list/tournament-list.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="selectedHero">
+<h2>My Heroes</h2>
 
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name"/>
-    </label>
-  </div>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+      [class.selected]="hero === selectedHero"
+      (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
 
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
