--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
-<h3>Top Heroes</h3>
+<h3>Top Skills</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4"
-     routerLink="/detail/{{hero.id}}">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
+  <a *ngFor="let skill of skills" class="col-1-4"
+     routerLink="/skills/{{skill.id}}">
+    <div class="module skill">
+      <h4>{{skill.name}}</h4>
     </div>
   </a>
 </div>
 
-<app-hero-search></app-hero-search>
+<app-skill-search></app-skill-search>
