--- a/src/app/skill-detail/skill-detail.component.html
+++ b/src/app/skill-detail/skill-detail.component.html
@@ -13,20 +13,11 @@
 </div>
 <h2>Сотрудники и их навыки:</h2>
 <div>
-  <ul class="bus_factors">
-    <li *ngFor="let employee of employees">
-
-      <button class="square" (click)="changeEmployeeSkill(employee.id)">
-        {{employee.name}}<img class="square-img" src="assets/icons/done.svg" *ngIf="employeeIdsHasSkill.includes(employee.id); else noSkill">
+    <div class="employee" *ngFor="let employee of employees" (click)="changeEmployeeSkill(employee.id)">
+        <img src="assets/icons/done.svg" *ngIf="employeeIdsHasSkill.includes(employee.id); else noSkill">
         <ng-template #noSkill><img class="square-img" src="assets/icons/icon_warning_red.svg"></ng-template>
-      </button>
-<!--      <button class="square" *ngIf="!employeeIdsHasSkill.includes(employee.id)"><img class="square-img" src="assets/icons/icon_warning_red.svg">{{employee.name}}</button>-->
+        <div class="employee-name"> {{employee.name}}</div>
+    </div>
 
-
-<!--      <button class="delete" title="delete employee"-->
-<!--              (click)="deleteEmployee(employee)">x</button>-->
-    </li>
-  </ul>
 </div>
 
-{{employeeSkills|json}}
