--- a/src/app/employee-detail/employee-detail.component.html
+++ b/src/app/employee-detail/employee-detail.component.html
@@ -11,3 +11,12 @@
   <br />
   <button (click)="save()">save</button>
 </div>
+<h2>Навыки сотрудника:</h2>
+<div>
+  <div class="skill" *ngFor="let skill of skills" (click)="changeEmployeeSkill(skill.id)">
+    <img src="assets/icons/done.svg" *ngIf="employeeHasSkillIds.includes(skill.id); else noSkill">
+    <ng-template #noSkill><img class="square-img" src="assets/icons/icon_warning_red.svg"></ng-template>
+    <div class="employee-name"> {{skill.name}}</div>
+  </div>
+
+</div>
