fix и поправить дашборд

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
   <a routerLink="/bus_factors">Skills</a>
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<!--<app-messages></app-messages>-->
