--- a/src/app/bus-factor-list/bus-factor-list.component.html
+++ b/src/app/bus-factor-list/bus-factor-list.component.html
@@ -41,10 +41,10 @@
 </div>
 
 
-<div>
-  <ul>
-    <li *ngFor="let i of employeeSkills">
-      <span class="badge">{{i|json}}</span>
-    </li>
-  </ul>
-</div>
+<!--<div>-->
+<!--  <ul>-->
+<!--    <li *ngFor="let i of employeeSkills">-->
+<!--      <span class="badge">{{i|json}}</span>-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--</div>-->
