--- a/src/app/bus-factor-list/bus-factor-list.component.scss
+++ b/src/app/bus-factor-list/bus-factor-list.component.scss
@@ -1,9 +1,18 @@
-/* private CSS styles */
+:host {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.skills, .employees {
+  width: 350px;
+}
+
 .bus_factors {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
+  width: 100%;
 }
 .bus_factors li {
   position: relative;
@@ -58,6 +67,7 @@ button {
   cursor: pointer;
   cursor: hand;
   font-family: Arial;
+  box-sizing: border-box;
 }
 
 button:hover {
@@ -65,6 +75,8 @@ button:hover {
 }
 
 button.delete {
+  border-radius: 5px;
+  box-sizing: content-box;
   position: relative;
   left: 194px;
   top: -32px;
@@ -72,13 +84,22 @@ button.delete {
   color: white;
 }
 
-.skills {
-  float: left;
-  width: 50%;
+.employees-header, .skills-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 12px;
+  input {
+    flex: 1;
+    margin-right: 8px;
+    height: 30px;
+    border-radius: 5px;
+  }
+  button {
+    height: 30px;
+  }
 }
 
-.employees {
-  float: right;
-  width: 50%;
+app-employee-item+app-employee-item, app-skill-item+app-skill-item {
+  margin-top: 8px;
 }
-
