--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,14 @@
-<h3>Top Employees with skills</h3>
+<h3>Сотрудники, у которых стоит перенимать навыки</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let employee of employees" class="col-1-4"
-     routerLink="/skills/{{employee.id}}">
+  <a *ngFor="let be of bestEmployees" class="col-1-4"
+     routerLink="/employees/{{ be[0] }}">
     <div class="module skill">
-      <h4>{{employee.name}}</h4>
+      <h4>{{ employeesDictionary[be[0]].name }}
+        <br />
+        {{ be[1] }} {{ be[1] | pluralize: ['навык', 'навыка', 'навыков'] }}
+      </h4>
     </div>
   </a>
 </div>
 
-<app-skill-search></app-skill-search>
+<!--<app-skill-search></app-skill-search>-->
