--- a/src/app/skill-detail/skill-detail.component.html
+++ b/src/app/skill-detail/skill-detail.component.html
@@ -1,23 +1,17 @@
-<div *ngIf="skill">
-
-  <h2>{{skill.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{skill.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="skill.name" placeholder="name"/>
-    </label>
+<div class="card-title">title</div>
+<div class="skill-info">
+  <div class="skill-id"></div>
+  <input [(ngModel)]="skill.name" placeholder="Название навыка"/>
+  <div class="skill-controls">
+    <button (click)="goBack()">Назад</button>
+    <button (click)="save()">Сохранить</button>
   </div>
-  <button (click)="goBack()">go back</button>
-  <br />
-  <button (click)="save()">save</button>
 </div>
-<h2>Сотрудники и их навык:</h2>
-<div>
-    <div class="employee" *ngFor="let employee of employees" (click)="changeEmployeeSkill(employee.id)">
-        <img src="assets/icons/done.svg" *ngIf="employeeIdsHasSkill.includes(employee.id); else noSkill">
-        <ng-template #noSkill><img class="square-img" src="assets/icons/icon_warning_red.svg"></ng-template>
-        <div class="employee-name"> {{employee.name}}</div>
-    </div>
-
+<div class="skill-box">
+  <div class="skills-title">Сотрудники с этим навыком</div>
+  <div class="skill" *ngFor="let employee of employees" (click)="changeEmployeeSkill(employee.id)">
+    <img src="assets/icons/done.svg" *ngIf="employeeIdsHasSkill.includes(employee.id); else noSkill">
+    <ng-template #noSkill><img class="square-img" src="assets/icons/icon_warning_red.svg"></ng-template>
+    <div class="skill-name"> {{employee.name}}</div>
+  </div>
 </div>
-
