--- a/src/app/skill-detail/skill-detail.component.html
+++ b/src/app/skill-detail/skill-detail.component.html
@@ -1,4 +1,4 @@
-<div class="card-title">title</div>
+<div class="card-title">Управление навыком</div>
 <div class="skill-info">
   <div class="skill-id"></div>
   <input [(ngModel)]="skill.name" placeholder="Название навыка"/>
