--- a/src/app/employee-detail/employee-detail.component.scss
+++ b/src/app/employee-detail/employee-detail.component.scss
@@ -19,6 +19,10 @@
     margin-bottom: 4px;
   }
 
+  input {
+    box-sizing: border-box;
+  }
+
   .employee-controls {
     display: flex;
     align-items: center;
@@ -42,13 +46,14 @@
 
   button {
     height: 30px;
+    width: 84px;
   }
 
   .skill {
     padding: 6px;
     display: flex;
     align-items: center;
-    border: 1px solid #f8ff18;
+    border: 1px solid #25beff;
     border-radius: 5px;
     +.skill {
       margin-top: 8px;
@@ -62,6 +67,10 @@
       height: 16px;
       min-width: 16px;
       min-height: 16px;
+    }
+
+    &:hover {
+      cursor: pointer;
     }
   }
 }
