--- a/src/app/employee-detail/employee-detail.component.html
+++ b/src/app/employee-detail/employee-detail.component.html
@@ -1,4 +1,4 @@
-<div class="card-title">title</div>
+<div class="card-title">Управление сотрудником</div>
 <div class="employee-info">
   <div class="employee-id"></div>
   <input [(ngModel)]="employee.name" placeholder="Имя Сотрудника"/>
